[gd_scene load_steps=38 format=3 uid="uid://c5s11217j6fsq"]

[ext_resource type="Script" path="res://scripts/enemyI.gd" id="1_3jlvb"]
[ext_resource type="Texture2D" uid="uid://drqk7opdt8pv5" path="res://assets/enemy/Imp Sprite Sheet.png" id="1_gp4qm"]
[ext_resource type="Script" path="res://scripts/hurt_box.gd" id="3_qs6ak"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xe4s5"]
atlas = ExtResource("1_gp4qm")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bstr"]
atlas = ExtResource("1_gp4qm")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl8gg"]
atlas = ExtResource("1_gp4qm")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1vuj"]
atlas = ExtResource("1_gp4qm")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1m7eh"]
atlas = ExtResource("1_gp4qm")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m6pt"]
atlas = ExtResource("1_gp4qm")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn36q"]
atlas = ExtResource("1_gp4qm")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkscm"]
atlas = ExtResource("1_gp4qm")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh27g"]
atlas = ExtResource("1_gp4qm")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsh2i"]
atlas = ExtResource("1_gp4qm")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjsvl"]
atlas = ExtResource("1_gp4qm")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgt1e"]
atlas = ExtResource("1_gp4qm")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4exlo"]
atlas = ExtResource("1_gp4qm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho1al"]
atlas = ExtResource("1_gp4qm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibp3v"]
atlas = ExtResource("1_gp4qm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_obfu7"]
atlas = ExtResource("1_gp4qm")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yja1"]
atlas = ExtResource("1_gp4qm")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iiv1h"]
atlas = ExtResource("1_gp4qm")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2f34"]
atlas = ExtResource("1_gp4qm")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8s8rr"]
atlas = ExtResource("1_gp4qm")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcjyl"]
atlas = ExtResource("1_gp4qm")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewumf"]
atlas = ExtResource("1_gp4qm")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayrys"]
atlas = ExtResource("1_gp4qm")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hijc"]
atlas = ExtResource("1_gp4qm")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6dob"]
atlas = ExtResource("1_gp4qm")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cg6du"]
atlas = ExtResource("1_gp4qm")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_csnv2"]
atlas = ExtResource("1_gp4qm")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwf1s"]
atlas = ExtResource("1_gp4qm")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts2ee"]
atlas = ExtResource("1_gp4qm")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy128"]
atlas = ExtResource("1_gp4qm")
region = Rect2(96, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3wjwa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe4s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bstr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl8gg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1vuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1m7eh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m6pt")
}],
"loop": true,
"name": &"attacking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn36q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkscm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh27g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsh2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjsvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgt1e")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4exlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho1al")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibp3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obfu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yja1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iiv1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2f34")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8s8rr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcjyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewumf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayrys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hijc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6dob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cg6du")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csnv2")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwf1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts2ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy128")
}],
"loop": true,
"name": &"sleep",
"speed": 2.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_etchd"]
radius = 5.0
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1leqt"]
radius = 8.0
height = 18.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_4dn1h"]
vertices = PackedVector2Array(96, -21, 238, -23, 245, 27, -24, 25, -32, 11, -14, -15)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4, 5)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-14, -15, -32, 11, -24, 25, 245, 27, 238, -23, 96, -21)])

[node name="Node2D" type="Node2D"]

[node name="enemyI" type="CharacterBody2D" parent="."]
scale = Vector2(2, 2)
collision_mask = 2
script = ExtResource("1_3jlvb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="enemyI"]
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_3wjwa")
animation = &"attacking"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyI"]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_etchd")

[node name="damageArea" type="Area2D" parent="enemyI"]

[node name="PlayerCollision" type="CollisionShape2D" parent="enemyI/damageArea"]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_etchd")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="enemyI"]
path_max_distance = 101.0

[node name="HurtBox" type="Area2D" parent="enemyI"]
script = ExtResource("3_qs6ak")

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyI/HurtBox"]
position = Vector2(-1.5, 0)
shape = SubResource("CapsuleShape2D_1leqt")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
position = Vector2(3, -7)
navigation_polygon = SubResource("NavigationPolygon_4dn1h")

[node name="patrolPositions" type="Node2D" parent="."]

[node name="start" type="Marker2D" parent="patrolPositions"]
position = Vector2(199, 0)

[node name="end" type="Marker2D" parent="patrolPositions"]

[connection signal="body_entered" from="enemyI/damageArea" to="enemyI" method="_on_damage_area_body_entered"]
[connection signal="target_reached" from="enemyI/NavigationAgent2D" to="enemyI" method="_on_navigation_agent_2d_target_reached"]
